fix multi page invoice summary missed align

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,7 +16,7 @@
             <option value="allelements.php">All Elements (Support & Not Supported)</option>
             <option value="barcodes.php">Barcodes</option>
             <option value="formating.php">Elements Format Setting</option>
-            <!-- <option value="example1.php">Sub Report</option> -->
+            <option value="invoice.php">Sample invoice</option>
             
             <!-- <option value="example1.php">Images</option>                        
             <option value="example1.php">Database</option>
