prepare sample listing report, with grouping

--- a/examples/index.html
+++ b/examples/index.html
@@ -17,6 +17,9 @@
             <option value="barcodes.php">Barcodes</option>
             <option value="formating.php">Elements Format Setting</option>
             <option value="invoice.php">Sample invoice</option>
+            <option value="groups.php">Groups</option>
+            <option value="vertical.php">Multicolumn (Vertical)</option>
+            <option value="horizontal.php">Multicolumn (Horizontal)</option>
             
             <!-- <option value="example1.php">Images</option>                        
             <option value="example1.php">Database</option>
