add sample of horizontal and vertical print order

--- a/examples/index.html
+++ b/examples/index.html
@@ -18,14 +18,8 @@
             <option value="formating.php">Elements Format Setting</option>
             <option value="invoice.php">Sample invoice</option>
             <option value="groups.php">Groups</option>
-            <option value="vertical.php">Multicolumn (Vertical)</option>
-            <option value="horizontal.php">Multicolumn (Horizontal)</option>
-            
-            <!-- <option value="example1.php">Images</option>                        
-            <option value="example1.php">Database</option>
-            <option value="example1.php">Bands</option>
-            <option value="example1.php">Multcolumn-Verticle</option>
-            <option value="example1.php">Multcolumn-Horizontal</option> -->
+            <option value="column_verticalorder.php">3 Columns Verticle Print Order</option>
+            <option value="column_horizontalorder.php">3 Column Horizontal Print Order</option>
         </select>
         </label>
         <button onclick="changeformat()">Reload</button>
