tested support several data source
1. postgresql
2. mysql
3. pdo
4. array (fixed value)

--- a/examples/index.html
+++ b/examples/index.html
@@ -20,6 +20,7 @@
             <option value="groups.php">Groups</option>
             <option value="column_verticalorder.php">3 Columns Verticle Print Order</option>
             <option value="column_horizontalorder.php">3 Column Horizontal Print Order</option>
+            <option value="databasesample.php?driver=postgresql">Use Database (postgresql)</option>            
         </select>
         </label>
         <button onclick="changeformat()">Reload</button>
