support export excel. and rename export/datasource class for avoid crash name

--- a/examples/index.html
+++ b/examples/index.html
@@ -24,8 +24,6 @@
         </select>
         </label>
         <button onclick="changeformat()">Reload</button>
-        <iframe src="" id="iframereport" style="width: 95vw; height:90vh;border:none">
-
-        </iframe>
+        <iframe src="" id="iframereport" style="width: 95vw; height:90vh;border:none"></iframe>
     </body>
 </html>
