support export xlsx

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,7 +16,8 @@
             <option value="allelements.php">All Elements (Support & Not Supported)</option>
             <option value="barcodes.php">Barcodes</option>
             <option value="formating.php">Elements Format Setting</option>
-            <option value="invoice.php">Sample invoice</option>
+            <option value="invoice.php?type=pdf">Sample invoice (PDF)</option>
+            <option value="invoice.php?type=xlsx">Sample invoice (Xlsx)</option>
             <option value="groups.php">Groups</option>
             <option value="column_verticalorder.php">3 Columns Verticle Print Order</option>
             <option value="column_horizontalorder.php">3 Column Horizontal Print Order</option>
